# gallerypi

./: CLAUDE.md  Cargo.toml  config.toml.example  prompt.md
.cargo/: config.toml
.claude/commands/: screenshot-test.md
deploy/: README.md  gallerypi-kiosk.service
screenshots/: report.html
src/: app.rs  config.rs  main.rs  ui.rs
src/db/: mod.rs  queries.rs  schema.rs
src/gallery/: mod.rs  model.rs  month_model.rs  row_types.rs
src/scanner/: exif.rs  mod.rs  walker.rs
src/thumbnail/: generator.rs  loader.rs  mod.rs
src/util/: hash.rs  paths.rs  time.rs
src/video/: gl_bridge.rs  mod.rs  mpv.rs
src/viewer/: gesture.rs  mod.rs
ui/: app.slint  gallery.slint  month_scroller.slint  thumbnail_cell.slint  types.slint  video_player.slint  viewer.slint
