[package]
name = "gallerypi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gallerypi"
path = "src/main.rs"

[dependencies]
# UI
slint = { version = "1.9", features = ["backend-winit", "renderer-skia"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = "5"

# EXIF
kamadak-exif = "0.5"

# File system
walkdir = "2"

# Concurrency
rayon = "1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"] }

# Cache & hashing
lru = "0.12"
sha2 = "0.10"
hex = "0.4"

# Video
libmpv2 = "5"

# Error handling & logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
num_cpus = "1"
once_cell = "1"

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
